	Fixed: Overwrite any existing conflicting symlinks when enabling service (systemd)
	Fixed: Possible use of uninitialized value $sqlServer in autoinstaller/Adapter/DebianAdapter.pm
	Fixed: sysvinit scripts are not enabled when using systemd (regression fix)
	Fixed: Missing APT source repositories for i-MSCP required sections

SERVERS
	Added: SQLNegativeCache directive to cache negative responses from SQL lookups (ProFTPD)
	Added: SQLUserWhereClause directive to disallow FTP connection when FTP user status is not 'ok' (ProFTPD)
	Backported: VsFTPd server implementation from 1.3.x branch

YOUTRACK
 	IP-1367 Support for the VsFTPd server
	IP-1444 Ubuntu - Vsftpd package broken - libgcc_s.so.1 must be installed for pthread_cancel to work

------------------------------------------------------------------------------------------------------------------------
1.2.14
------------------------------------------------------------------------------------------------------------------------

2016-02-25: Laurent Declercq
	RELEASE i-MSCP 1.2.14

FRONTEND
	Fixed: Could not edit reseller PHP permissions (PHP Editor)
	Fixed: Unchecking all disabled functions has no effect (PHP Editor)

INSTALLER
	Fixed: Password must not be escaped (MySQL installer)

------------------------------------------------------------------------------------------------------------------------
1.2.13
------------------------------------------------------------------------------------------------------------------------

2016-02-24: Laurent Declercq
	RELEASE i-MSCP 1.2.13

CONFIG
	Fixed: Missing /php-fpm/php-fpm.pool.default declaration in configs/ubuntu/php-fpm/install.xml
	Updated: Licence header in skeletons

CONTRIB
	Fixed: "my" variable $cfgTpl masks earlier declaration in same scope (20_dovecot_connections.pl)
	Fixed: "my" variable $cfgTpl masks earlier declaration in same scope (40_dovecot_pfs.pl)

INSTALLER